--- a/ToyLang.cabal
+++ b/ToyLang.cabal
@@ -15,7 +15,8 @@ cabal-version:        >=1.10
 
 executable ToyLang
   main-is:              Main.hs
-  -- other-modules:
+  build-tools:          alex
+  other-modules:        Lexer
   -- other-extensions:
   build-depends:        base >= 4.7 && < 5
   hs-source-dirs:       src
