--- a/ToyLang.cabal
+++ b/ToyLang.cabal
@@ -18,6 +18,7 @@ executable ToyLang
   build-tools:          alex
   other-modules:        Lexer
   -- other-extensions:
-  build-depends:        base >= 4.7 && < 5
+  build-depends:        base >= 4.7 && < 5, mtl >= 2.2 && < 3, array >= 0.5 && < 1,
+                        utf8-string >= 1.0 && < 2
   hs-source-dirs:       src
   default-language:     Haskell2010
