--- a/ToyLang.cabal
+++ b/ToyLang.cabal
@@ -22,3 +22,14 @@ executable ToyLang
                         utf8-string >= 1.0 && < 2
   hs-source-dirs:       src
   default-language:     Haskell2010
+
+Test-Suite LexerTest
+  type:               exitcode-stdio-1.0
+  main-is:            LexerTest.hs
+  build-tools:        alex
+  other-modules:      Lexer
+  build-depends:      base >= 4.7 && < 5, mtl >= 2.2 && < 3, array >= 0.5 && < 1,
+                      utf8-string >= 1.0 && < 2
+  hs-source-dirs:     src, test
+  default-language:   Haskell2010
+
