--- a/ToyLang.cabal
+++ b/ToyLang.cabal
@@ -16,9 +16,9 @@ cabal-version:        >=1.10
 executable ToyLang
   main-is:              Main.hs
   build-tools:          alex, happy
-  other-modules:        Lexer, Parser, Types, SemanticAnalysis
+  other-modules:        Lexer, Parser, Types, SemanticAnalysis, Typecheck
   -- other-extensions:
   build-depends:        base >= 4.7 && < 5, mtl >= 2.2 && < 3, array >= 0.5 && < 1,
-                        utf8-string >= 1.0 && < 2
+                        utf8-string >= 1.0 && < 2, containers >= 0.5 && < 1
   hs-source-dirs:       src
   default-language:     Haskell2010
